core/rskit-media/tests/snapshots/golden__codec_h265.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::video::H265)"
---
"h265"
