core/rskit-media/tests/snapshots/golden__codec_opus.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::audio::OPUS)"
---
"opus"
