core/rskit-media/tests/snapshots/golden__codec_vp9.snap
---
source: crates/rskit-media/tests/golden.rs
expression: "Codec::new(codec::video::VP9)"
---
"vp9"
