core/rskit-media/tests/snapshots/golden__codecs_for_format_mp4.snap
---
source: crates/rskit-media/tests/golden.rs
expression: codecs
---
[
    "aac",
    "ac3",
    "av1",
    "eac3",
    "h264",
    "h265",
    "mp3",
    "opus",
]
