core/rskit-media/tests/snapshots/golden__codecs_for_format_webm.snap
---
source: crates/rskit-media/tests/golden.rs
expression: codecs
---
[
    "av1",
    "opus",
    "vorbis",
    "vp8",
    "vp9",
]
