core/rskit-media/tests/snapshots/golden__format_info_jpeg.snap
---
source: crates/rskit-media/tests/golden.rs
expression: info
---
FormatInfo {
    id: Format(
        "jpeg",
    ),
    extension: "jpeg",
    mime_type: "image/jpeg",
    is_container: false,
    supported_media_types: [
        Image,
    ],
    default_video_codec: None,
    default_audio_codec: None,
}
